Fix cutoff on landing polygons

--- a/dev/scss/components/_homepage-polys.scss
+++ b/dev/scss/components/_homepage-polys.scss
@@ -21,6 +21,7 @@
   }
   svg {
     display: inline-block !important;
+    overflow: visible;
   }
   .js & {
     opacity: 0;
