--- a/dev/scss/components/_landingpage.scss
+++ b/dev/scss/components/_landingpage.scss
@@ -2,10 +2,8 @@
 # LANDING PAGE
 ==============================================================================*/
 .panel--landing {
-  overflow: hidden;
   height: 100vh;
   padding: 5rem;
-
   &:after {
     content: '';
     display: block;
@@ -24,6 +22,11 @@
   min-height: 100%;
   opacity: 1;
   z-index: 1;
+}
+.hero-video-container {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  overflow: hidden;
 }
 
 #hero-logo {
